	* os/WaitFor.c:
	Die, XTESTEXT1, die!

	* dix/devices.c:
	* include/input.h:
	* mi/mipointer.h:
	* mi/mipointer.c:
	Get rid of horrendous, somewhat misguided, DDX binary-compatibility
	glue.

	* hw/xfree86/common/xf86Config.c:
	* hw/xfree86/common/xf86Configure.c:
	* parser/Module.c:
	* parser/xf86Parser.c:
	Ignore requests to load deprecated GLcore and speedo modules
	(properly, this time).

	* hw/xfree86/loader/Makefile.am:
	* hw/xfree86/loader/loader.c:
	* hw/xfree86/loader/loader.h:
	* hw/xfree86/loader/ar.h:
	* hw/xfree86/loader/aout.h:
	* hw/xfree86/loader/aoutloader.h:
	* hw/xfree86/loader/aoutloader.c:
	* hw/xfree86/loader/coff.h:
	* hw/xfree86/loader/coffloader.h:
	* hw/xfree86/loader/coffloader.c:
	* hw/xfree86/loader/elf.h:
	* hw/xfree86/loader/elfloader.h:
	* hw/xfree86/loader/elfloader.c:
	Kill the a.out, ELF and COFF loaders with extreme prejudice.  Good
	riddance.  There's more where this came from, too.

2006-05-30  Matthieu Herrb <matthieu.herrb@laas.fr>

	* hw/xfree86/os-support/bsd/Makefile.am:
	Powerpc machines also need ioperm_noop.c

2006-05-30  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/doc/man/xorg.conf.man.pre:
	Properly document the DPMS, SyncOnGreen, and TargetRefresh options.

2006-05-29  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c: Remove superfluous definition of tfp tokens.

2005-05-24  Daniel Stone  <daniel@freedesktop.org>

	* xkb/ddxKillSrv.c:
	* xkb/ddxPrivate.c:
	* xkb/ddxVT.c:
	Minor #include cleanups.

	* xkb/xkb.c:
	* xkb/xkbUtils.c:
	* hw/xfree86/common/xf86Config.c:
	* hw/xfree86/common/xf86Io.c:
	* hw/xfree86/os-support/sysv/xqueue.c:
	* hw/xnest/Keyboard.c:
	* hw/kdrive/src/kinput.c:
	* hw/xgl/egl/kinput.c:
	* hw/dmx/input/dmxinputinit.c:
	* hw/xgl/glx/xglx.c:
	* hw/xwin/winconfig.c:
	* hw/xwin/winkeybd.c:
	Remove -xkbmap argument.

2006-05-26  Matthieu Herrb <matthieu.herrb@laas.fr>

	* hw/xfree86/os-support/bsd/bsd_mouse.c:
	check buffersize before reading next char, fixes the 