@@ -1254,10 +1254,6 @@ if test "x$XORG" = xyes -o "x$XGL" = xyes; then
 	AC_DEFINE(NEED_XF86_TYPES, 1, [Need XFree86 typedefs])
 	AC_DEFINE(NEED_XF86_PROTOTYPES, 1, [Need XFree86 helper functions])
 	AC_DEFINE(__XSERVERNAME__, "Xorg", [Name of X server])
-	# XXX HACK!  if anyone cares about elfloader in 7.0 you need to
-	# XXX do something smarter here.
-	AC_DEFINE(DLOPEN_HACK, 1, [Prefer dlloader modules to elfloader])
-	AC_DEFINE(DLOPEN_SUPPORT, 1, [Use libdl-based loader])
 	AC_DEFINE(WITH_VGAHW, 1, [Building vgahw module])
 	AC_DEFINE(DRIVERS, {}, [Built-in output drivers (none)])
 	AC_DEFINE(IDRIVERS, {}, [Built-in input drivers (none)])
