@@ -30,12 +30,6 @@
 /* URL to go to for support. */
 #undef __VENDORDWEBSUPPORT__
 
-/* Prefer dlloader modules to elfloader */
-#undef DLOPEN_HACK
-
-/* Use libdl-based loader. */
-#undef DLOPEN_SUPPORT
-
 /* Built-in output drivers. */
 #undef DRIVERS
 
